--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -77,6 +77,7 @@ sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'p
 sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
 sp-storage = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
 sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
+
 substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
 
 substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
@@ -111,9 +112,9 @@ polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 
 
 pallet-evm = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
 pallet-ethereum = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-pallet_im_online = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
-pallet_session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
-pallet_staking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
+pallet-im-online = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
+pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.6' }
+pallet-staking = { path = '../pallets/staking', branch = 'polkadot-v0.9.6' }
 
 runtime-primitives = { path = '../primitives' }
 
