--- a/scripts/js/package.json
+++ b/scripts/js/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@polkadot/api": "^4.4.1",
+    "@polkadot/keyring": "^6.9.1",
     "@polkadot/util": "^6.0.5",
     "@polkadot/util-crypto": "^6.0.5",
     "bn.js": "^5.2.0",
