--- a/runtime/halongbay/Cargo.toml
+++ b/runtime/halongbay/Cargo.toml
@@ -21,7 +21,7 @@ package = 'parity-scale-codec'
 version = '2.1.0'
 
 [dependencies]
-hex-literal = { optional = true, version = '0.3.1' }
+hex-literal = { version = '0.3.1' }
 serde = { features = ['derive'], optional = true, version = '1.0.119' }
 
 # Substrate dependencies
@@ -106,7 +106,6 @@ pkfp-oracle-runtime-api = { default-features = false, path = '../../pkfp/oracle/
 [features]
 default = ['std']
 runtime-benchmarks = [
-    'hex-literal',
     'frame-benchmarking',
     'frame-support/runtime-benchmarks',
     'frame-system-benchmarking',
