--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -83,13 +83,13 @@ substrate-prometheus-endpoint = { git = 'https://github.com/paritytech/substrate
 
 substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 
-fc-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-fp-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-fp-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-fc-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-fc-rpc-core = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-fc-db = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-fc-mapping-sync = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
+fc-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
+fp-consensus = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
+fp-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
+fc-rpc = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
+fc-rpc-core = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
+fc-db = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
+fc-mapping-sync = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
 
 frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
@@ -112,8 +112,8 @@ polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'relea
 polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8' }
 polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.8' }
 
-pallet-evm = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
-pallet-ethereum = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'polkasmith-v1.0.1' }
+pallet-evm = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
+pallet-ethereum = { git = 'https://github.com/polkafoundry/frontier.git', branch = 'test' }
 pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.8' }
 orml-tokens = { path = '../pkfp/tokens' }
 pkfp-oracle-rpc = { path = '../pkfp/oracle/rpc' }
